Fix problems with NavigationBar title too long Redeem VIP challenge problems Accounts title too long Added Challenge Points showing on Menu Selection

--- a/public/javascripts/mobile/resources/sass/sencha-touch.scss
+++ b/public/javascripts/mobile/resources/sass/sencha-touch.scss
@@ -937,6 +937,12 @@ $tip-width: $mask-width - $mask-offset + $shadow-width;
 
 .challengeMenuSelections {
    @extend .mainMenuSelections;
+   .x-hasbadge .x-badge {
+      font-size:$largeFontSize;
+      @include opacity(.9);
+      background-color : #E86025;
+      border-color : darken(#E86025,5%);
+   }
    .x-dataview-item, .x-data-item {
       width:33%;
       .mainPageItemWrapper {
